Change History
--------------

This file contains a list of all changes starting after the release of
sox-11gamma, followed by a list of prior authors and features.


sox-14.0.1	2009-xx-xx
----------

Previously deprecated features that have been removed in this release:

Newly deprecated features (to be removed in future):

Previously deprecated features (to be removed in future):

  Deprec-  Feature    [O(ption)]                           Removal
  ated in  [F(ormat)] [E(ffect)]   Replacement             due after
  -------  ----------------------  ----------------------  -------
  14.2.0   E key alias             pitch                   14.3.0
  14.2.0   E pan                   ~= mixer/remix          14.3.0
  14.1.0   F wve (native)          wve (libsndfile)        2009-07-29
  14.1.0   Behaviour whereby       soxi                    2009-07-29
           sox -V file(s) -n
           doesn't read to EOF.
  14.3.0   F flac: libFLAC 1.1.2,3 libFLAC > 1.1.3         2009-12-14
  14.3.0   PLAY_RATE_ARG           SOX_OPTS                2009-12-14
  14.3.0   E norm -b, norm -i      gain -B, gain -en       2010-06-14
  14.3.0   E filter                ~=sinc                  2010-06-14
  14.1.0   E resample alias        rate                    2010-06-14
  14.1.0   E polyphase alias       rate                    2010-06-14
  14.1.0   E rabbit alias          rate                    2010-06-14

LibSoX interface changes:

File formats:

Audio device drivers:

Effects:

  o Fix [2254919] Silence doesn't trim digital silence correctly.  (robs)

Other new features:

  o Added libSoX example #4: concatenating audio files.  (robs)

Other bug fixes:

  o Fix build so that grouped files (e.g. play -r 6k "*.vox" plays all
    at 6k) works.  (robs)
  o Fix simultaneous play & rec not working.  (robs)

Internal improvements:


sox-14.3.0	2009-06-14
----------

Previously deprecated features that have been removed in this release:

  Deprec-  Feature    [O(ption)]