@@ -24,6 +24,7 @@ OPT_FORMAT(lpc10, LPC10, lpc10.c)
 OPT_FORMAT(mp3, MP3, mp3.c mp3-duration.h)
 OPT_FORMAT(oss, OSS, oss.c)
 OPT_FORMAT(pulseaudio, PULSEAUDIO, pulseaudio.c)
+OPT_FORMAT(waveaudio, WAVEAUDIO, waveaudio.c)
 OPT_FORMAT(sndio, SNDIO, sndio.c)
 OPT_FORMAT(sunau, SUN_AUDIO, sunaudio.c)
 OPT_FORMAT(vorbis, OGG_VORBIS, vorbis.c vorbis1.h)
